--- a/peliculas.html
+++ b/peliculas.html
@@ -4,7 +4,9 @@ title: Películas
 ---
 
 <h1>Películas</h1>
-layout: default
+<ul>
+  {% for pelicula in site.peliculas %}
+    <li>
       <a href="{{ pelicula.url }}">{{ pelicula.title }}</a> <small>{{ pelicula.date | date: "%d-%m-%Y" }}</small>
     </li>
   {% endfor %}
