--- a/poemas.html
+++ b/poemas.html
@@ -4,7 +4,9 @@ title: Poemas
 ---
 
 <h1>Poemas</h1>
-layout: default
+<ul>
+  {% for poema in site.poemas %}
+    <li>
       <a href="{{ poema.url }}">{{ poema.title }}</a> <small>{{ poema.date | date: "%d-%m-%Y" }}</small>
     </li>
   {% endfor %}
