--- a/nav.html
+++ b/nav.html
@@ -4,5 +4,8 @@
     <li><a href="/poemas.html">Poemas</a></li>
     <li><a href="/peliculas.html">Películas</a></li>
     <li><a href="/about.html">Acerca de</a></li>
+    <li><a href="/feed.xml" title="Subscribe to RSS Feed">
+      <img src="/assets/rss-icon.png" alt="RSS Feed" style="width: 20px; height: 20px;">
+    </a></li>
   </ul>
 </nav>
