--- a/peliculas.html
+++ b/peliculas.html
@@ -7,7 +7,7 @@ title: Películas
 <ul>
   {% for pelicula in site.peliculas %}
     <li>
-      <a href="{{ pelicula.url }}">{{ pelicula.title }}</a> <small>{{ pelicula.date | date: "%d-%m-%Y" }}</small>
+  <a href="{{ site.baseurl }}{{ pelicula.url }}">{{ pelicula.title }}</a> <small>{{ pelicula.date | date: "%d-%m-%Y" }}</small>
     </li>
   {% endfor %}
 </ul>
