--- a/poemas.html
+++ b/poemas.html
@@ -3,11 +3,36 @@ layout: default
 title: Poemas
 ---
 
-<h1>Poemas</h1>
-<ul>
+<h1 style="text-align:center; margin-bottom:2em;">Poemas</h1>
+<div style="display:flex; flex-wrap:wrap; gap:2em; justify-content:center; margin-top:2em;">
+
   {% for poema in site.poemas %}
-    <li>
-      <a href="{{ poema.url }}">{{ poema.title }}</a> <small>{{ poema.date | date: "%d-%m-%Y" }}</small>
-    </li>
+    <div style="
+      background: #ffe9f7; 
+      border-radius: 50px; 
+      box-shadow: 0 6px 20px rgba(0,0,0,0.12); 
+      padding: 2em 2.5em; 
+      max-width:280px; 
+      min-width:220px; 
+      margin-bottom:1em; 
+      display:flex; 
+      flex-direction:column; 
+      align-items:center; 
+      transition: transform 0.3s, box-shadow 0.3s;
+      text-align:center;
+      cursor:pointer;
+    "
+    onmouseover="this.style.transform='translateY(-10px)'; this.style.boxShadow='0 12px 30px rgba(0,0,0,0.18)';" 
+    onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 6px 20px rgba(0,0,0,0.12)';"
+    >
+      <a href="{{ poema.url }}" style="font-size:1.3em; font-weight:bold; color:#d63384; text-decoration:none; margin-bottom:0.5em;">
+        {{ poema.title }}
+      </a>
+      <span style="color:#555; font-size:0.9em; margin-bottom:0.7em;">{{ poema.date | date: "%d-%m-%Y" }}</span>
+      <span style="color:#333; font-size:1em; font-style:italic; white-space:pre-line;">
+        {{ poema.content | strip_html | truncatewords: 20, '...' }}
+      </span>
+    </div>
   {% endfor %}
-</ul>
+
+</div>
