--- a/poemas.html
+++ b/poemas.html
@@ -4,6 +4,13 @@ title: Poemas
 ---
 
 <h1 style="text-align:center; margin-bottom:2em;">Poemas</h1>
+<div style="background:#fffbe6; border:1px solid #ffe58f; color:#8c6d1f; padding:1.2em 2em; border-radius:18px; max-width:600px; margin:0 auto 2em auto; font-size:1.15em; text-align:center; box-shadow:0 4px 24px rgba(0,0,0,0.12); position:relative;">
+  <strong>Disclaimer</strong><br><br>
+  Los poemas aquí presentados son obras originales de Carlos Wolf.<br>
+  Son un archivo histórico y no pretenden formar parte de un poemario existente, esto es un WebLog o abreviado blog de poemas.<br>
+  Si deseas contactar al autor para cualquier consulta o propuesta, puedes hacerlo a través de su cuenta de Instagram:<br>
+  <a href="https://www.instagram.com/cwolf_imc/" target="_blank" rel="noopener" style="color:#0056b3; text-decoration:none;">@cwolf_imc</a>.<br><br>
+</div>
 <div style="display:flex; flex-wrap:wrap; gap:2em; justify-content:center; margin-top:2em;">
 
   {% assign poemas_ordenados = site.poemas | sort: 'date'%}
