--- a/nav.html
+++ b/nav.html
@@ -6,6 +6,7 @@
     </button>
     <ul class="navbar-menu">
     <li><a href="{{ site.baseurl }}/">Inicio</a></li>
+    <li><a href="{{ site.baseurl }}/criticas">Críticas</a></li>
     <li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
     <li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
     <li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
