--- a/nav.html
+++ b/nav.html
@@ -10,6 +10,7 @@
     <li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
     <li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
     <li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
+    <li><a href="{{ site.baseurl }}/libros">Libros</a></li>
     <li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
       <li>
         <a href="{{ '/feed.xml' | relative_url }}" title="RSS general" class="rss-link">
