--- a/nav.html
+++ b/nav.html
@@ -46,8 +46,12 @@
 @media (max-width: 700px) {
   .navbar-container { flex-direction:column; align-items:flex-start; }
   .navbar-toggle { display:block; margin-bottom:0.5em; }
-  .navbar-menu { flex-direction:column; gap:0.5em; width:100%; display:none; }
+  .navbar-menu { flex-direction:column; gap:0; width:100%; display:none; position:absolute; top:100%; left:0; right:0; background:#fff; border-bottom:1px solid #ddd; padding:0; }
   .navbar-menu.active { display:flex; }
+  .navbar-menu li { width:100%; }
+  .navbar-menu li a { display:block; padding:0.6em 1.5em; border:none; border-left:3px solid transparent; border-radius:0; }
+  .navbar-menu li a:hover { background:#f5f5f5; border-left-color:#0056b3; }
+  .rss-link:hover { border-left-color:#ff6600 !important; }
 }
 </style>
 
