--- a/nav.html
+++ b/nav.html
@@ -1,93 +1,248 @@
 <nav class="navbar">
   <div class="navbar-container">
     <a href="{{ site.baseurl }}/" class="navbar-brand">Palabras al Viento</a>
-    <button class="navbar-toggle" aria-label="Menú" onclick="document.querySelector('.navbar-menu').classList.toggle('active')">
-      <span style="font-size:1.7em;">☰</span>
+    <button class="navbar-toggle" aria-label="Menú" aria-expanded="false" onclick="toggleMenu(event)">
+      <span>☰</span>
     </button>
     <ul class="navbar-menu">
-    <li><a href="{{ site.baseurl }}/">Inicio</a></li>
-    <li><a href="{{ site.baseurl }}/criticas">Críticas</a></li>
-    <li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
-    <li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
-    <li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
-    <li><a href="{{ site.baseurl }}/libros">Libros</a></li>
-    <li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
-      <li>
-        <a href="{{ '/feed.xml' | relative_url }}" title="RSS general" class="rss-link">
-          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
-            <circle cx="6.18" cy="17.82" r="2.18" fill="#ff6600"/>
-            <path d="M4 11c5 0 9 4 9 9" stroke="#ff6600" stroke-width="2.5" stroke-linecap="round"/>
-            <path d="M4 4c9.4 0 17 7.6 17 17" stroke="#ff6600" stroke-width="2.5" stroke-linecap="round"/>
-          </svg>
-        </a>
-      </li>
-      <li>
-        <a href="{{ '/feed-poemas.xml' | relative_url }}" title="RSS Poemas" class="rss-link">
-          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle;">
-            <circle cx="6.18" cy="17.82" r="2.18" fill="#0056b3"/>
-            <path d="M4 11c5 0 9 4 9 9" stroke="#0056b3" stroke-width="2.5" stroke-linecap="round"/>
-            <path d="M4 4c9.4 0 17 7.6 17 17" stroke="#0056b3" stroke-width="2.5" stroke-linecap="round"/>
-          </svg>
-        </a>
-      </li>
+      <li><a href="{{ site.baseurl }}/">Inicio</a></li>
+      <li><a href="{{ site.baseurl }}/poemas">Poemas</a></li>
+      <li><a href="{{ site.baseurl }}/peliculas">Películas</a></li>
+      <li><a href="{{ site.baseurl }}/libros">Libros</a></li>
+      <li><a href="{{ site.baseurl }}/criticas">Ensayos</a></li>
+      <li><a href="{{ site.baseurl }}/experimentos">Experimentos</a></li>
+      <li><a href="{{ site.baseurl }}/about">Acerca de</a></li>
+      <li class="navbar-divider"></li>
+      <li><a href="{{ '/feed.xml' | relative_url }}" title="RSS General" class="navbar-rss">RSS</a></li>
     </ul>
   </div>
 </nav>
 
 <style>
-.navbar { background:#fff; box-shadow:0 2px 8px rgba(0,0,0,0.07); padding:0.5em 0; }
-.navbar-container { display:flex; align-items:center; justify-content:space-between; max-width:900px; margin:auto; padding:0 1em; }
-.navbar-brand { font-size:1.3em; color:#0056b3; font-weight:bold; text-decoration:none; margin-right:1em; }
-.navbar-toggle { background:none; border:none; cursor:pointer; display:none; }
-.navbar-menu { display:flex; gap:1.2em; list-style:none; margin:0; padding:0; }
-.navbar-menu li a { color:#444; text-decoration:none; font-size:1em; padding:0.3em 0.7em; border-radius:6px; transition:background 0.2s; }
-.navbar-menu li a:hover { background:#e6f0fa; color:#0056b3; }
-.rss-link svg { vertical-align:middle; }
-@media (max-width: 700px) {
-  .navbar-container { flex-direction:column; align-items:flex-start; }
-  .navbar-toggle { display:block; margin-bottom:0.5em; }
-  .navbar-menu { flex-direction:column; gap:0; width:100%; display:none; position:absolute; top:100%; left:0; right:0; background:#fff; border-bottom:1px solid #ddd; padding:0; }
-  .navbar-menu.active { display:flex; }
-  .navbar-menu li { width:100%; }
-  .navbar-menu li a { display:block; padding:0.6em 1.5em; border:none; border-left:3px solid transparent; border-radius:0; }
-  .navbar-menu li a:hover { background:#f5f5f5; border-left-color:#0056b3; }
-  .rss-link:hover { border-left-color:#ff6600 !important; }
+/* Navbar Base */
+.navbar {
+  background: #fff;
+  border-bottom: 1px solid #e0e0e0;
+  padding: clamp(0.5rem, 1.5vw, 0.8rem) 0;
+  position: relative;
+  z-index: 100;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.05);
+}
+
+.navbar-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: clamp(300px, 95vw, 1200px);
+  margin: 0 auto;
+  padding: 0 clamp(0.5rem, 2vw, 1.5rem);
+  box-sizing: border-box;
+}
+
+.navbar-brand {
+  font-size: clamp(1.1rem, 2.5vw, 1.4rem);
+  color: #333;
+  font-weight: 600;
+  text-decoration: none;
+  letter-spacing: 0.3px;
+  flex-shrink: 0;
+  transition: color 0.25s ease;
+}
+
+.navbar-brand:hover {
+  color: #0056b3;
+}
+
+/* Toggle Button */
+.navbar-toggle {
+  background: none;
+  border: none;
+  cursor: pointer;
+  display: none;
+  font-size: clamp(1.2rem, 2vw, 1.6rem);
+  color: #333;
+  padding: 0.3rem;
+  transition: color 0.25s ease;
+  flex-shrink: 0;
+}
+
+.navbar-toggle:hover {
+  color: #0056b3;
+}
+
+/* Menu */
+.navbar-menu {
+  display: flex;
+  gap: clamp(0.8rem, 2vw, 1.8rem);
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.navbar-menu li {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+}
+
+.navbar-menu li a {
+  color: #555;
+  text-decoration: none;
+  font-size: clamp(0.9rem, 1.5vw, 1rem);
+  font-weight: 500;
+  padding: 0.4rem 0;
+  border-bottom: 2px solid transparent;
+  transition: all 0.25s ease;
+}
+
+.navbar-menu li a:hover {
+  color: #000;
+  border-bottom-color: #333;
+}
+
+.navbar-rss {
+  color: #ff6600 !important;
+  font-weight: 600;
+  padding: 0.4rem 0.8rem !important;
+  border: 1px solid #ff6600;
+  border-radius: 4px;
+  transition: all 0.25s ease;
+}
+
+.navbar-rss:hover {
+  background: #ff6600;
+  color: #fff !important;
+  border-bottom: none !important;
+}
+
+.navbar-divider {
+  width: 1px;
+  height: clamp(1rem, 2vw, 1.5rem);
+  background: #ddd;
+  margin: 0 0.5rem;
+  display: none;
+}
+
+/* Responsive: Tablet & Mobile */
+@media (max-width: 900px) {
+  .navbar-toggle {
+    display: block;
+  }
+
+  .navbar-menu {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    right: 0;
+    flex-direction: column;
+    gap: 0;
+    background: #fff;
+    border-bottom: 1px solid #e0e0e0;
+    padding: 0.5rem 0;
+    display: none;
+    width: 100%;
+    align-items: flex-start;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    z-index: 1000;
+  }
+
+  .navbar-menu.active {
+    display: flex;
+  }
+
+  .navbar-menu li {
+    width: 100%;
+    display: flex;
+  }
+
+  .navbar-menu li a {
+    display: block;
+    width: 100%;
+    padding: clamp(0.6rem, 1.5vw, 0.8rem) clamp(1rem, 2vw, 1.5rem);
+    border: none;
+    border-left: 3px solid transparent;
+    border-radius: 0;
+  }
+
+  .navbar-menu li a:hover {
+    background: #f8f8f8;
+    border-left-color: #0056b3;
+    border-bottom: none;
+  }
+
+  .navbar-rss:hover {
+    border-left-color: #ff6600 !important;
+    background: transparent;
+  }
+
+  .navbar-divider {
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 0.4rem 0;
+  }
+}
+
+@media (max-width: 480px) {
+  .navbar-container {
+    padding: 0 1rem;
+  }
+
+  .navbar-brand {
+    font-size: 1.1rem;
+  }
+
+  .navbar-menu li a {
+    font-size: 0.95rem;
+    padding: 0.7rem 1rem;
+  }
 }
 </style>
 
 <script>
-  // Adjust body padding so a fixed/expanded nav doesn't cover content on small screens.
-  (function () {
-    function adjustBodyPadding() {
-      var nav = document.querySelector('nav');
-      if (!nav) return;
-      var style = window.getComputedStyle(nav);
-      var isFixed = style.position === 'fixed' || style.position === 'sticky' || nav.classList.contains('fixed');
-      // If nav is fixed or menu is active and likely overlapping, set padding-top equal to nav height
-      if (isFixed || (document.querySelector('.navbar-menu') && document.querySelector('.navbar-menu').classList.contains('active'))) {
-        var h = Math.ceil(nav.getBoundingClientRect().height);
-        document.body.style.paddingTop = h + 'px';
-      } else {
-        // remove only if we previously set it
-        if (document.body.style.paddingTop) document.body.style.paddingTop = '';
-      }
-    }
+function toggleMenu(event) {
+  event.preventDefault();
+  const menu = document.querySelector('.navbar-menu');
+  const button = event.target.closest('.navbar-toggle');
+  const isActive = menu.classList.toggle('active');
+  button.setAttribute('aria-expanded', isActive);
+  adjustBodyPadding();
+}
 
-    // Run on load and on resize/orientationchange
-    document.addEventListener('DOMContentLoaded', function () {
-      adjustBodyPadding();
-      // ensure toggle clicks also update padding (mobile menu open/close)
-      var toggle = document.querySelector('.navbar-toggle');
-      if (toggle) toggle.addEventListener('click', function () { setTimeout(adjustBodyPadding, 50); });
-    });
-    window.addEventListener('resize', adjustBodyPadding);
-    window.addEventListener('orientationchange', function() { setTimeout(adjustBodyPadding, 120); });
+function adjustBodyPadding() {
+  const nav = document.querySelector('nav.navbar');
+  const menu = document.querySelector('.navbar-menu');
+  
+  if (!nav || !menu) return;
+  
+  if (menu.classList.contains('active')) {
+    const height = Math.ceil(nav.getBoundingClientRect().height + menu.getBoundingClientRect().height);
+    document.body.style.paddingTop = height + 'px';
+  } else {
+    document.body.style.paddingTop = '';
+  }
+}
 
-    // Observe changes to navbar-menu classlist (in case other scripts toggle it)
-    var menu = document.querySelector('.navbar-menu');
-    if (menu && window.MutationObserver) {
-      var mo = new MutationObserver(function () { adjustBodyPadding(); });
-      mo.observe(menu, { attributes: true, attributeFilter: ['class'] });
-    }
-  })();
+document.addEventListener('DOMContentLoaded', function () {
+  adjustBodyPadding();
+  const toggle = document.querySelector('.navbar-toggle');
+  if (toggle) {
+    toggle.addEventListener('click', adjustBodyPadding);
+  }
+});
+
+window.addEventListener('resize', adjustBodyPadding);
+
+// Close menu when clicking on a link
+document.querySelectorAll('.navbar-menu a').forEach(link => {
+  link.addEventListener('click', function() {
+    const menu = document.querySelector('.navbar-menu');
+    const button = document.querySelector('.navbar-toggle');
+    menu.classList.remove('active');
+    button.setAttribute('aria-expanded', 'false');
+    adjustBodyPadding();
+  });
+});
 </script>
